--- a/Login.html
+++ b/Login.html
@@ -65,7 +65,7 @@
         var password = document.getElementById("password").value;
 
         if (username === "rendy" && password === "anjay") {
-            window.location.href = "Beranda.html";
+            window.location.href = "index.html";
         } else {
             alert("Username atau Password salah!");
         }
