--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header style="background-color: #f0f0f0; padding: 10px; text-align: center;">
         <h1>Anjay web</h1>
     </header>
-    <nav style="background-color: #e0e0e0; padding: 10px;">
+    <nav style="background-color: #ff9123; padding: 10px;">
         <ul style="list-style-type: none; margin: 0; padding: 0;">
-            <li style="display: inline; margin-right: 10px;"><a href="Beranda.html">Beranda</a></li>
-            <li style="display: inline; margin-right: 10px;"><a href="Biodata.html">Biodata</a></li>
-            <li style="display: inline;"><a href="Kontak.html">Kontak</a></li>
-            <li style="display: inline; margin-left: 1450px;"><a href="Login.html">Login</a> <a href="register.html">Register</a></li>
+            <li style="display: inline; margin-right: 10px;"><a href="Beranda.html" style="color: white;">Beranda</a></li>
+            <li style="display: inline; margin-right: 10px;"><a href="Biodata.html" style="color: white;">Biodata</a></li>
+            <li style="display: inline;"><a href="Kontak.html" style="color: white;">Kontak</a></li>
+            <li style="display: inline; margin-right: 10px;"><a href="Login.html" style="color: white;">Login</a></li>
         </ul>
     </nav>
 
@@ -27,23 +27,53 @@
             <p>Hai, Saya adalah rendy aldrian sibata biasa di panggil rendy atau ren. Saya merupakan mahasiswa dari universitas pattimura prodi ilmu komputer di jenjang S1. Saya merupakan mahasiswa yang minat dengan di dalam dunia teknologi. Tujuan saya ingin selalu berkembang dan bisa berguna di kehidupan keluarga dan masyarakat atau bahkan negara. </p>
             <br>
             <h2>Video Tentang Saya</h2>
-            <iframe width="1260" height="715" src="https://www.youtube.com/embed/dzDo22Kcx2Y?si=2RJROJ_9JuUtXQGT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/dzDo22Kcx2Y?si=2RJROJ_9JuUtXQGT" style="height: 720px;" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
-        <aside style="flex: 1; background-color: #f0f0f0; padding: 10px;">
+        <aside style="flex: 1; background-color: #ff9123; padding: 10px;">
             <h3>Info tambahan</h3>
             <p>informasi tambahan.</p>
             <ul>
-                <li><a href="https://unpatti.ac.id">Website UNIVERSITAS</a></li>
-                <li><a href="https://fst.unpatti.ac.id">Website FAKULTAS</a></li>
-                <li><a href="https://ilkom.fst.unpatti.ac.id">Website PRODI</a></li>
+                <li><a href="https://unpatti.ac.id" style="color: #e0e0e0;">Website UNIVERSITAS</a></li>
+                <li><a href="https://fst.unpatti.ac.id" style="color: #e0e0e0;">Website FAKULTAS</a></li>
+                <li><a href="https://ilkom.fst.unpatti.ac.id" style="color: #e0e0e0;">Website PRODI</a></li>
             </ul>
         </aside>
     </div>
 
-    <footer style="background-color: #e0e0e0; padding: 10px; text-align: center;">
-        <p>&copy; 2025 Rendy Aldrian Sibata.</p>
-    </footer>
+    <div class="row">
+        <div class="column side">
+            <h2 style="text-align: center;">Universitas</h2>
+            <a href="https://unpatti.ac.id"><img src="img/cropped-logo-1.png" style="width: 150px; border: none; box-shadow: none;"></a>
+            <p style="text-align: center;">Universitas pattimura</p>
+        </div>
+        
+        <div class="column middle">
+            <h2 style="text-align: center;">Email Dan Kontak</h2>
+            <div style="display: flex; gap: 30px; justify-content:center">
+                <a href="rendyaldriansibata495@gmail.com"><img src="img/1745134033998.png" style="width: 130px; border: none; box-shadow: none;"></a>
+                <a href="https://wa.me/+62 821-1469-6056"><img src="img/1745134033824.png" style="width: 130px; border: none; box-shadow: none;"></a>
+            </div>
+            <p style="text-align: center;">Email : rendyaldriansibata495@gmail.com <br> Kontak : 082114696056
+            </p>
+        </div>
     
+        <div class="column side">
+            <h2 style="text-align: center;">Sosial Media</h2>
+            <div style="display: flex; gap: 30px; justify-content:center">
+                <a href="https://www.instagram.com/renn.4_?igsh=cGRnaWVqY3U5dXNz"><img src="img/1745134033883.png" style="width: 130px; border: none; box-shadow: none;"></a>
+                <a href="https://www.facebook.com/share/1FzbbBoEgs/"><img src="img/1745134033935.png" style="width: 130px; border: none; box-shadow: none;"></a>
+            </div>
+            <p style="text-align: center;">Instagram : @renn.4_ <br> Facebook : Rendy Ren</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <footer style="background-color: #e0e0e0; padding: 10px; text-align: center;">
+            <p>&copy; 2025 Rendy Aldrian Sibata.</p>
+        </footer>
+    </div>
+
+
 </body>
 </html>
