--- a/Kontak.html
+++ b/Kontak.html
@@ -10,13 +10,12 @@
     <header style="background-color: #f0f0f0; padding: 10px; text-align: center;">
         <h1>Anjay web</h1>
     </header>
-    <nav style="background-color: #e0e0e0; padding: 10px;">
+    <nav style="background-color: #ff9123; padding: 10px;">
         <ul style="list-style-type: none; margin: 0; padding: 0;">
-            <li style="display: inline; margin-right: 10px;"><a href="Beranda.html">Beranda</a></li>
-            <li style="display: inline; margin-right: 10px;"><a href="Biodata.html">Biodata</a></li>
-            <li style="display: inline;"><a href="Kontak.html">Kontak</a></li>
-            <li style="display: inline; margin-left: 1450px;"><a href="Login.html">Login</a> <a href="register.html">Register</a></li>
-
+            <li style="display: inline; margin-right: 10px;"><a href="Beranda.html" style="color: white;">Beranda</a></li>
+            <li style="display: inline; margin-right: 10px;"><a href="Biodata.html" style="color: white;">Biodata</a></li>
+            <li style="display: inline;"><a href="Kontak.html" style="color: white;">Kontak</a></li>
+            <li style="display: inline; margin-right: 10px;"><a href="Login.html" style="color: white;">Login</a></li>
         </ul>
     </nav>
 
@@ -49,15 +48,41 @@
             <h2>Lokasi Saya</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15926.936649293872!2d128.23559346982915!3d-3.647974760857869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d6cec05fa0d3777%3A0xe2d14bbca95ee287!2sCitraLand%20Ambon!5e0!3m2!1sid!2sid!4v1742451972708!5m2!1sid!2sid" width="900" height="650" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <aside style="flex: 1; background-color: #f0f0f0; padding: 10px;">
+        <aside style="flex: 1; background-color: #ff9123; padding: 10px;">
             <h3>Info tambahan</h3>
             <p>informasi tambahan.</p>
             <ul>
-                <li><a href="https://unpatti.ac.id">Website UNIVERSITAS</a></li>
-                <li><a href="https://fst.unpatti.ac.id">Website FAKULTAS</a></li>
-                <li><a href="https://ilkom.fst.unpatti.ac.id">Website PRODI</a></li>
+                <li><a href="https://unpatti.ac.id" style="color: #e0e0e0;">Website UNIVERSITAS</a></li>
+                <li><a href="https://fst.unpatti.ac.id" style="color: #e0e0e0;">Website FAKULTAS</a></li>
+                <li><a href="https://ilkom.fst.unpatti.ac.id" style="color: #e0e0e0;">Website PRODI</a></li>
             </ul>
         </aside>
+    </div>
+    <div class="row">
+        <div class="column side">
+            <h2 style="text-align: center;">Universitas</h2>
+            <a href="https://unpatti.ac.id"><img src="img/cropped-logo-1.png" style="width: 150px; border: none; box-shadow: none;"></a>
+            <p style="text-align: center;">Universitas pattimura</p>
+        </div>
+        
+        <div class="column middle">
+            <h2 style="text-align: center;">Email Dan Kontak</h2>
+            <div style="display: flex; gap: 30px; justify-content:center">
+                <a href="rendyaldriansibata495@gmail.com"><img src="img/1745134033998.png" style="width: 130px; border: none; box-shadow: none;"></a>
+                <a href="https://wa.me/+62 821-1469-6056"><img src="img/1745134033824.png" style="width: 130px; border: none; box-shadow: none;"></a>
+            </div>
+            <p style="text-align: center;">Email : rendyaldriansibata495@gmail.com <br> Kontak : 082114696056
+            </p>
+        </div>
+    
+        <div class="column side">
+            <h2 style="text-align: center;">Sosial Media</h2>
+            <div style="display: flex; gap: 30px; justify-content:center">
+                <a href="https://www.instagram.com/renn.4_?igsh=cGRnaWVqY3U5dXNz"><img src="img/1745134033883.png" style="width: 130px; border: none; box-shadow: none;"></a>
+                <a href="https://www.facebook.com/share/1FzbbBoEgs/"><img src="img/1745134033935.png" style="width: 130px; border: none; box-shadow: none;"></a>
+            </div>
+            <p style="text-align: center;">Instagram : @renn.4_ <br> Facebook : Rendy Ren</p>
+        </div>
     </div>
 
     <footer style="background-color: #e0e0e0; padding: 10px; text-align: center;">
